# djl-serving

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TROUBLESHOOTING.md  build.gradle  build.gradle.kts  deploy.sh  gradle.properties  output.txt  settings.gradle  settings.gradle.kts  testoidc.yml
engines/python/setup/: README.rst  djl_python_engine.py  pyproject.toml  setup.py
engines/python/setup/djl_python/: __init__.py  adapter_custom_code_manager.py  adapter_formatter_mixin.py  adapter_manager_mixin.py  arg_parser.py  async_utils.py  custom_formatter_handling.py  custom_handler_service.py  deepspeed.py  download_util.py  encode_decode.py  fastertransformer.py  huggingface.py  huggingface_dynamic_batch.py  huggingface_rolling_batch.py  import_utils.py  input_parser.py  inputs.py  lmcache_utils.py  np_util.py  output_formatter.py  outputs.py  pair_list.py  python_async_engine.py  python_sync_engine.py  request.py  request_io.py  rolling_batch.py  sagemaker.py  service_loader.py  session_manager.py  session_utils.py  sklearn_handler.py  sm_log_filter.py  stable-diffusion.py  stable_diffusion_inf2.py  streaming_utils.py  telemetry.py  tensorrt_llm.py  tensorrt_llm_python.py  (+10 more)
engines/python/setup/djl_python/aws/: cloud_watch.py
engines/python/setup/djl_python/bedrock/: bedrock_utils.py
engines/python/setup/djl_python/chat_completions/: chat_properties.py  chat_utils.py  vllm_chat_properties.py  vllm_chat_utils.py
engines/python/setup/djl_python/lmi_trtllm/: request_response_handler.py  request_response_utils.py  trtllm_async_service.py
engines/python/setup/djl_python/lmi_vllm/: request_response_utils.py  vllm_async_service.py
engines/python/setup/djl_python/multimodal/: utils.py
engines/python/setup/djl_python/neuron_utils/: model_loader.py  neuron_smart_default_utils.py  nxd_loader.py  utils.py
engines/python/setup/djl_python/properties_manager/: README.md  chat_properties.py  ds_properties.py  hf_properties.py  lmi_dist_rb_properties.py  (+7 more)
engines/triton/triton-native/: .gitignore  CMakeLists.txt  README.md  build.gradle  prepare.sh
(+1030 files in other folders)
